--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,29 @@
-# prefix | で画面を縦に分割
-bind h split-window -h
+# ================
+# 基本設定
+# ===============
+# prefixキーをC-aに変更する
+set -g prefix C-a
 
-# prefix - で画面を水へに分割
-bind v split-window -v 
+# デフォルトのprefixキーC-bを解除する
+unbind C-b
+
+# ペインを垂直分割する
+bind s split-window -h -c '#{pane_current_path}'
+# ペインを水平分割する
+bind v split-window -v -c '#{pane_current_path}'
+
+# prefix r で設定ファイルのリロード
+bind r source-file ~/.tmux.conf \; display "Reloaded!" 
+
+# ================
+# 見た目
+# ===============
+# tmux を256色表示できるようにする
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
+
+# 非アクティブなウィンドウの背景色を灰色にする
+set-option -g window-style 'bg=#444444'
+
+# アクティブなウィンドウの背景色を黒色にする
+set-option -g window-active-style 'bg=#222222' 
